[package]
name = "db-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] } 
bincode = { version = "1.3.3" } 
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }